# Python

./: .gitignore  alembic.ini  docker-compose.yaml
alembic/: env.py
alembic/versions/: 28acc420f40c_create_students_table.py
files/: input.txt  new.txt  prices.txt  unique_output.txt
home-work-10/: pyproject.toml
home-work-10/app/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
home-work-10/app/routers/: students.py
home-work-2/: Home_Work2.py
home-work-3/: Order.py  Product.py  Store.py  __init__.py
home-work-4/: __init__.py  book.py  bookNotAvailable.py  library.py  user.py
home-work-5/: __init__.py
home-work-6/: __init__.py  calculator_api.py
home-work-7/: __init__.py
home-work-8/: FastAPi.py  FastApiHomeWork.py
home-work-8/files/: fio.json
home-work-9/: load_data.py  main.py
raw/: Functions.py
